commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.worksheetcustompropertydata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.worksheetcustompropertydata.yml
@@ -13,7 +13,7 @@ items:
       - 'excel!Excel.Interfaces.WorksheetCustomPropertyData#value:member'
   - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyData#key:member'
     summary: |-
-      获取 customProperty 的键。 只读。
+      获取 customProperty 的键。 自定义属性键不区分大小写。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -29,7 +29,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyData#value:member'
     summary: |-
-      获取自定义属性的值。 只读。
+      获取或设置自定义属性的值。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
