--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.slicerdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.slicerdata.yml
@@ -55,7 +55,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.SlicerData#id:member'
     summary: |-
-      表示切片器的唯一 ID。 只读。
+      表示切片器的唯一 ID。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -131,7 +131,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.SlicerData#slicerItems:member'
     summary: |-
-      表示作为切片器一部分的 SlicerItems 的集合。 只读。
+      表示作为切片器一部分的 SlicerItems 的集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: slicerItems
@@ -222,7 +222,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.SlicerData#worksheet:member'
     summary: |-
-      表示包含切片器的工作表。 只读。
+      表示包含切片器的工作表。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
