--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.slicerstyledata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.slicerstyledata.yml
@@ -28,7 +28,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.SlicerStyleData#readOnly:member'
     summary: |-
-      指定此 SlicerStyle 对象是否为只读。 只读。
+      指定此 SlicerStyle 对象是否为只读。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readOnly
