--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.workbookloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.workbookloadoptions.yml
@@ -24,6 +24,7 @@ items:
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#properties:member'
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#protection:member'
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#readOnly:member'
+      - 'excel!Excel.Interfaces.WorkbookLoadOptions#showPivotFieldList:member'
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#tables:member'
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#use1904DateSystem:member'
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#usePrecisionAsDisplayed:member'
@@ -56,7 +57,7 @@ items:
           - 'excel!Excel.Interfaces.ApplicationLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#autoSave:member'
     summary: |-
-      指定工作簿是否处于自动保存模式。 只读。
+      指定工作簿是否处于自动保存模式。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoSave
@@ -86,7 +87,7 @@ items:
           - 'excel!Excel.Interfaces.BindingCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#calculationEngineVersion:member'
     summary: |-
-      返回有关 Excel 计算引擎的版本号。 只读。
+      返回有关 Excel 计算引擎的版本号。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationEngineVersion
@@ -116,7 +117,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#isDirty:member'
     summary: |-
-      指定自上次保存以来是否对指定的工作簿进行任何更改。 如果要关闭修改过的工作簿而不保存或提示保存它，则可以将该属性设置为 true。
+      指定自上次保存工作簿后是否进行了更改。 如果要关闭修改过的工作簿而不保存或提示保存它，则可以将该属性设置为 true。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isDirty
@@ -131,7 +132,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#name:member'
     summary: |-
-      获取工作簿名称。 只读。
+      获取工作簿名称。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -146,7 +147,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#previouslySaved:member'
     summary: |-
-      指定工作簿是否已在本地或在线保存。 只读。
+      指定是否曾在本地或联机保存工作簿。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: previouslySaved
@@ -191,7 +192,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookProtectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#readOnly:member'
     summary: |-
-      如果在只读模式下打开工作簿，则为 True。 只读。
+      如果在只读模式下打开工作簿，则为 True。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readOnly
@@ -201,6 +202,22 @@ items:
     type: property
     syntax:
       content: 'readOnly?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#showPivotFieldList:member'
+    summary: |-
+      指定是否在工作簿级别显示数据透视表的 "字段列表" 窗格。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: showPivotFieldList
+    fullName: showPivotFieldList
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showPivotFieldList?: boolean;'
       return:
         type:
           - boolean
