--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.worksheetdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.worksheetdata.yml
@@ -34,7 +34,7 @@ items:
       - 'excel!Excel.Interfaces.WorksheetData#visibility:member'
   - uid: 'excel!Excel.Interfaces.WorksheetData#autoFilter:member'
     summary: |-
-      表示工作表的 AutoFilter 对象。 只读。
+      表示工作表的 AutoFilter 对象。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoFilter
@@ -49,7 +49,7 @@ items:
           - 'excel!Excel.Interfaces.AutoFilterData:interface'
   - uid: 'excel!Excel.Interfaces.WorksheetData#charts:member'
     summary: |-
-      返回作为工作表的一部分的图表的集合。 只读。
+      返回作为工作表的一部分的图表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: charts
@@ -64,7 +64,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetData#charts~0:complex'
   - uid: 'excel!Excel.Interfaces.WorksheetData#comments:member'
     summary: |-
-      返回工作表上的所有 Comments 对象的集合。 只读。
+      返回工作表上的所有 Comments 对象的集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comments
@@ -79,7 +79,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetData#comments~0:complex'
   - uid: 'excel!Excel.Interfaces.WorksheetData#customProperties:member'
     summary: |-
-      返回工作表级自定义属性的集合。
+      获取工作表级自定义属性的集合。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -95,7 +95,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetData#customProperties~0:complex'
   - uid: 'excel!Excel.Interfaces.WorksheetData#enableCalculation:member'
     summary: |-
-      获取或设置工作表的 enableCalculation 属性。 如此如果 Excel 根据需要重新计算工作表。 如果 Excel 不重新计算工作表，则该值为 False。
+      确定 Excel 是否应根据需要重新计算工作表。 如此如果 Excel 根据需要重新计算工作表。 如果 Excel 不重新计算工作表，则该值为 False。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enableCalculation
@@ -125,7 +125,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetData#horizontalPageBreaks~0:complex'
   - uid: 'excel!Excel.Interfaces.WorksheetData#id:member'
     summary: |-
-      返回用于唯一标识指定工作簿中工作表的值。即使工作表被重命名或移动，标识符的值仍然相同。只读。
+      返回用于唯一标识指定工作簿中工作表的值。 即使工作表被重命名或移动，标识符的值仍然相同。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -155,7 +155,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.WorksheetData#names:member'
     summary: |-
-      一组范围限定到当前工作表的名称。 只读。
+      一组范围限定到当前工作表的名称。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: names
@@ -185,7 +185,7 @@ items:
           - 'excel!Excel.Interfaces.PageLayoutData:interface'
   - uid: 'excel!Excel.Interfaces.WorksheetData#pivotTables:member'
     summary: |-
-      一组属于 worksheet 的 PivotTable 对象。 只读。
+      一组属于工作表的数据透视表对象。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTables
@@ -215,7 +215,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.WorksheetData#protection:member'
     summary: |-
-      返回表工作表的工作表保护对象。 只读。
+      返回表工作表的工作表保护对象。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
@@ -230,7 +230,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetProtectionData:interface'
   - uid: 'excel!Excel.Interfaces.WorksheetData#shapes:member'
     summary: |-
-      返回工作表上的所有 Shape 对象的集合。 只读。
+      返回工作表上的所有 Shape 对象的集合。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shapes
@@ -245,7 +245,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetData#shapes~0:complex'
   - uid: 'excel!Excel.Interfaces.WorksheetData#showGridlines:member'
     summary: |-
-      获取或设置工作表的网格线标志。 此标志确定是否对用户显示网格线。
+      指定是否对用户显示网格线。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showGridlines
@@ -260,7 +260,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetData#showHeadings:member'
     summary: |-
-      获取或设置工作表的标题标志。 此标志确定是否对用户显示标题。
+      指定标题是否对用户可见。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showHeadings
@@ -275,7 +275,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetData#slicers:member'
     summary: |-
-      返回作为工作表一部分的切片器的集合。 只读。
+      返回作为工作表一部分的切片器的集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: slicers
@@ -290,7 +290,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetData#slicers~0:complex'
   - uid: 'excel!Excel.Interfaces.WorksheetData#standardHeight:member'
     summary: |-
-      返回工作表中所有行的标准（默认）行高，以磅为单位。 只读。
+      返回工作表中所有行的标准（默认）行高，以磅为单位。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: standardHeight
@@ -305,7 +305,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.WorksheetData#standardWidth:member'
     summary: |-
-      返回或设置工作表中所有列的标准（默认）列宽。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
+      指定工作表中所有列的标准（默认）宽度。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: standardWidth
@@ -320,7 +320,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.WorksheetData#tabColor:member'
     summary: |-
-      获取或设置工作表标签颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
+      工作表的选项卡颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tabColor
@@ -335,7 +335,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.WorksheetData#tables:member'
     summary: |-
-      属于工作表的表的集合。 只读。
+      属于工作表的表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
