--- a/docs/docs-ref-autogen/excel/excel/excel.pagelayoutmarginoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.pagelayoutmarginoptions.yml
@@ -20,7 +20,7 @@ items:
       - 'excel!Excel.PageLayoutMarginOptions#top:member'
   - uid: 'excel!Excel.PageLayoutMarginOptions#bottom:member'
     summary: |-
-      表示要在打印时使用的页面布局下边距（使用指定的单位）。
+      指定要用于打印的单位的页面下边距（单位为单位）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bottom
@@ -35,7 +35,7 @@ items:
           - number
   - uid: 'excel!Excel.PageLayoutMarginOptions#footer:member'
     summary: |-
-      表示要在打印时使用的页面布局页脚边距（使用指定的单位）。
+      指定要用于打印的单位的页面布局页脚边距。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: footer
@@ -50,7 +50,7 @@ items:
           - number
   - uid: 'excel!Excel.PageLayoutMarginOptions#header:member'
     summary: |-
-      表示要在打印时使用的页面布局页眉边距（使用指定的单位）。
+      以指定要用于打印的单位指定页面布局标题边距。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: header
@@ -65,7 +65,7 @@ items:
           - number
   - uid: 'excel!Excel.PageLayoutMarginOptions#left:member'
     summary: |-
-      表示要在打印时使用的页面布局左边距（使用指定的单位）。
+      按指定要用于打印的单位指定页面布局的左边距。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -80,7 +80,7 @@ items:
           - number
   - uid: 'excel!Excel.PageLayoutMarginOptions#right:member'
     summary: |-
-      表示要在打印时使用的页面布局右边距（使用指定的单位）。
+      指定要用于打印的单位的页面（以指定单位为右边距）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: right
@@ -95,7 +95,7 @@ items:
           - number
   - uid: 'excel!Excel.PageLayoutMarginOptions#top:member'
     summary: |-
-      表示要在打印时使用的页面布局上边距（使用指定的单位）。
+      指定要用于打印的单位的页面上边距（按指定单位）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
