--- a/docs/docs-ref-autogen/excel/excel/excel.pivothierarchy.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.pivothierarchy.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.PivotHierarchy#context:member'
@@ -168,7 +168,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.PivotHierarchy#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -201,7 +201,7 @@ items:
           - 'excel!Excel.Interfaces.PivotHierarchyData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -213,7 +213,7 @@ references:
     name: Excel.Interfaces.PivotHierarchyLoadOptions
   - uid: 'excel!Excel.Interfaces.PivotHierarchyUpdateData:interface'
     name: Interfaces.PivotHierarchyUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.PivotHierarchyData:interface'
     name: Excel.Interfaces.PivotHierarchyData
