--- a/docs/docs-ref-autogen/excel/excel/excel.rangeformat.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.rangeformat.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RangeFormat#adjustIndent:member(1)'
@@ -44,7 +44,7 @@ items:
     summary: |-
       调整范围格式的缩进量。 缩进值的范围为0到250，以字符为单位。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: adjustIndent(amount)
     fullName: adjustIndent(amount)
     langs:
@@ -95,7 +95,7 @@ items:
         description: ''
   - uid: 'excel!Excel.RangeFormat#autoIndent:member'
     summary: |-
-      指示将文本对齐方式设为相等分布时文本是否会自动缩进。
+      指定当文本对齐方式设置为相等分布时，文本是否自动缩进。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoIndent
@@ -110,7 +110,7 @@ items:
           - boolean
   - uid: 'excel!Excel.RangeFormat#borders:member'
     summary: |-
-      应用于整个区域的 Border 对象的集合。 只读。
+      应用于整个区域的 Border 对象的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
@@ -125,7 +125,7 @@ items:
           - 'excel!Excel.RangeBorderCollection:class'
   - uid: 'excel!Excel.RangeFormat#columnWidth:member'
     summary: |-
-      获取或设置区域内的所有列的宽度。 如果列宽不统一，则返回 NULL。
+      指定区域中所有 colums 的宽度。 如果列宽不统一，则返回 NULL。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnWidth
@@ -152,7 +152,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.RangeFormat#fill:member'
     summary: |-
-      返回在整个区域内定义的 fill 对象。 只读。
+      返回在整个区域内定义的 fill 对象。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
@@ -167,7 +167,7 @@ items:
           - 'excel!Excel.RangeFill:class'
   - uid: 'excel!Excel.RangeFormat#font:member'
     summary: |-
-      返回在整个区域内定义的 Font 对象。 只读。
+      返回在整个区域内定义的 Font 对象。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
@@ -335,7 +335,7 @@ items:
                       }
   - uid: 'excel!Excel.RangeFormat#protection:member'
     summary: |-
-      返回某一区域的格式 protection 对象。 只读。
+      返回某一区域的格式 protection 对象。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
@@ -365,7 +365,7 @@ items:
           - 'excel!Excel.RangeFormat#readingOrder~0:complex'
   - uid: 'excel!Excel.RangeFormat#rowHeight:member'
     summary: |-
-      获取或设置区域中所有行的高度。 如果行高不一致，则将返回 null。
+      区域中所有行的高度。 如果行高不一致，则将返回 null。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowHeight
@@ -403,7 +403,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.RangeFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -424,7 +424,7 @@ items:
             - 'excel!Excel.RangeFormat:class'
   - uid: 'excel!Excel.RangeFormat#shrinkToFit:member'
     summary: |-
-      指示文本是否自动缩小以适合可用列宽。
+      指定文本是否自动收缩以显示可用列宽。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shrinkToFit
@@ -439,7 +439,7 @@ items:
           - boolean
   - uid: 'excel!Excel.RangeFormat#textOrientation:member'
     summary: |-
-      获取或设置区域内的所有单元格的文本方向。 文本方向应为-90 到90之间的整数，或者为180垂直方向的文本。 如果区域中的方向不一致，则将返回 null。
+      区域中所有单元格的文本方向。 文本方向应为-90 到90之间的整数，或者为180垂直方向的文本。 如果区域中的方向不一致，则将返回 null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
@@ -500,7 +500,7 @@ items:
           - boolean
   - uid: 'excel!Excel.RangeFormat#useStandardWidth:member'
     summary: |-
-      指示 Range 对象的列宽是否等于工作表的标准宽度。 如果 Range 对象的列宽等于工作表的标准宽度，则返回 True。 如果区域中包含多个列，并且各列的高度不相同，则返回 Null。 否则返回 False。
+      指定 Range 对象的列宽是否等于工作表的标准宽度。 如果 Range 对象的列宽等于工作表的标准宽度，则返回 True。 如果区域中包含多个列，并且各列的高度不相同，则返回 Null。 否则返回 False。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardWidth
@@ -530,7 +530,7 @@ items:
           - 'excel!Excel.RangeFormat#verticalAlignment~0:complex'
   - uid: 'excel!Excel.RangeFormat#wrapText:member'
     summary: |-
-      指示 Excel 是否将对象中的文本换行。 指示整个区域不具有统一换行设置的空值
+      指定 Excel 是否对对象中的文本进行换行。 指示整个区域不具有统一换行设置的空值
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
@@ -544,7 +544,7 @@ items:
         type:
           - boolean
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RangeBorderCollection:class'
     name: Excel.RangeBorderCollection
@@ -580,7 +580,7 @@ references:
         fullName: ' | "Context" | "LeftToRight" | "RightToLeft"'
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData:interface'
     name: Interfaces.RangeFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.RangeFormatData:interface'
     name: Excel.Interfaces.RangeFormatData
