--- a/docs/docs-ref-autogen/excel/excel/excel.rowcolumnpivothierarchy.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.rowcolumnpivothierarchy.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RowColumnPivotHierarchy#context:member'
@@ -185,7 +185,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.RowColumnPivotHierarchy#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -234,7 +234,7 @@ items:
           - 'excel!Excel.Interfaces.RowColumnPivotHierarchyData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -246,7 +246,7 @@ references:
     name: Excel.Interfaces.RowColumnPivotHierarchyLoadOptions
   - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyUpdateData:interface'
     name: Interfaces.RowColumnPivotHierarchyUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyData:interface'
     name: Excel.Interfaces.RowColumnPivotHierarchyData
