--- a/docs/docs-ref-autogen/excel/excel/excel.tablecollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.tablecollection.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.TableCollection#add:member(1)'
@@ -87,7 +87,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.TableCollection#count:member'
     summary: |-
-      返回工作簿中的表数目。 只读。
+      返回工作簿中的表数目。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: count
@@ -318,7 +318,7 @@ items:
         - id: propertyNamesAndPaths
           description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.TableCollection#onAdded:member'
     summary: |-
       在工作簿中添加新表格时发生。
@@ -409,7 +409,7 @@ items:
           - 'excel!Excel.Interfaces.TableCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.Table:class'
     name: Excel.Table
@@ -428,7 +428,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -456,13 +456,13 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.TableCollection#onAdded~0:complex'
     name: OfficeExtension.EventHandlers<Excel.TableAddedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.TableAddedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -476,7 +476,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.TableChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.TableChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -490,7 +490,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.TableDeletedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.TableDeletedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -504,7 +504,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.TableFilteredEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.TableFilteredEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
