commit translated contents

--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.charttitleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.charttitleupdatedata.yml
@@ -30,7 +30,7 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#overlay:member'
     summary: |-
-      表示图表标题是否将叠加在图表上的布尔值。
+      指定图表标题是否将覆盖图表。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
@@ -45,7 +45,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#text:member'
     summary: |-
-      表示图表的标题文本。
+      指定图表的标题文本。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
@@ -60,7 +60,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#visible:member'
     summary: |-
-      表示图表标题对象是否可见的布尔值。
+      指定图表标题是否为 shape.visibile。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
