--- a/docs/docs-ref-autogen/excel/excel/excel.numberformatinfo.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.numberformatinfo.yml
@@ -4,15 +4,14 @@ items:
     summary: |-
       定义适当的区域性格式，以显示数字。 这取决于当前的系统区域性设置。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.NumberFormatInfo
     fullName: Excel.NumberFormatInfo
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.NumberFormatInfo#context:member'
@@ -24,7 +23,6 @@ items:
       - 'excel!Excel.NumberFormatInfo#toJSON:member(1)'
   - uid: 'excel!Excel.NumberFormatInfo#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    isPreview: true
     name: context
     fullName: context
     langs:
@@ -37,7 +35,6 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.NumberFormatInfo#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
-    isPreview: true
     name: load(options)
     fullName: load(options)
     langs:
@@ -56,7 +53,6 @@ items:
             - 'excel!Excel.Interfaces.NumberFormatInfoLoadOptions:interface'
   - uid: 'excel!Excel.NumberFormatInfo#load:member(2)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
-    isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -75,7 +71,6 @@ items:
             - 'string | string[]'
   - uid: 'excel!Excel.NumberFormatInfo#load:member(3)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
-    isPreview: true
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -104,8 +99,7 @@ items:
     summary: |-
       获取用作数值的小数分隔符的字符串。 这取决于当前的系统设置。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberDecimalSeparator
     fullName: numberDecimalSeparator
     langs:
@@ -122,7 +116,7 @@ items:
           #### <a name="examples"></a>示例
 
           ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/85-preview-apis/culture-info.yaml
+          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/50-workbook/culture-info.yaml
           // This will convert a number like "14,37" to "14.37"
           // (assuming the system decimal separator is ".").
             await Excel.run(async (context) => {
@@ -148,8 +142,7 @@ items:
     summary: |-
       获取一个字符串，用于将数字值的小数位数与小数的左边隔开。 这取决于当前的系统设置。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberGroupSeparator
     fullName: numberGroupSeparator
     langs:
@@ -166,7 +159,7 @@ items:
           #### <a name="examples"></a>示例
 
           ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/85-preview-apis/culture-info.yaml
+          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/50-workbook/culture-info.yaml
           await Excel.run(async (context) => {
             // This will convert a number like "123-456-789" to "123,456,789"
             // (assuming the system thousands separator is ",").
@@ -190,7 +183,6 @@ items:
           ```
   - uid: 'excel!Excel.NumberFormatInfo#toJSON:member(1)'
     summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 NumberFormatInfo 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.NumberFormatInfoData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    isPreview: true
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -203,7 +195,7 @@ items:
           - 'excel!Excel.Interfaces.NumberFormatInfoData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
