--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.chartformatstring.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.chartformatstring.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartFormatString#context:member'
@@ -136,7 +136,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartFormatString#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -169,7 +169,7 @@ items:
           - 'excel!Excel.Interfaces.ChartFormatStringData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -181,7 +181,7 @@ references:
     name: Excel.Interfaces.ChartFormatStringLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartFormatStringUpdateData:interface'
     name: Interfaces.ChartFormatStringUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartFormatStringData:interface'
     name: Excel.Interfaces.ChartFormatStringData
