--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.stylecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.stylecollectionloadoptions.yml
@@ -63,7 +63,7 @@ items:
           - 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.StyleCollectionLoadOptions#builtIn:member'
     summary: |-
-      对于集合中的每一项：指示样式是否为内置样式。
+      对于集合中的每个项目：指定样式是否为内置样式。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: builtIn
@@ -108,7 +108,7 @@ items:
           - 'excel!Excel.Interfaces.RangeFontLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.StyleCollectionLoadOptions#formulaHidden:member'
     summary: |-
-      对于集合中的每一项：指示工作表受保护时是否隐藏公式。
+      对于集合中的每一项：指定在工作表处于保护状态时是否隐藏公式。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaHidden
@@ -138,7 +138,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleCollectionLoadOptions#includeAlignment:member'
     summary: |-
-      对于集合中的每一项：指示样式是否包括 AutoIndent、HorizontalAlignment、VerticalAlignment、WrapText、IndentLevel 和 TextOrientation 属性。
+      对于集合中的每一项：指定样式包括 AutoIndent、HorizontalAlignment、VerticalAlignment、WrapText、IndentLevel 和 TextOrientation 属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeAlignment
@@ -153,7 +153,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleCollectionLoadOptions#includeBorder:member'
     summary: |-
-      对于集合中的每一项：指示样式是否包含 Color、ColorIndex、LineStyle 和权数边框属性。
+      对于集合中的每一项：指定样式是否包含 Color、ColorIndex、LineStyle 和权数边框属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeBorder
@@ -168,7 +168,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleCollectionLoadOptions#includeFont:member'
     summary: |-
-      对于集合中的每一项：指示样式是否包括背景、粗体、颜色、ColorIndex、FontStyle、斜体、名称、大小、删除线、下标、上标和下划线字体属性。
+      对于集合中的每一项：指定样式是否包括背景、粗体、颜色、ColorIndex、FontStyle、斜体、名称、大小、删除线、下标、上标和下划线字体属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeFont
@@ -183,7 +183,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleCollectionLoadOptions#includeNumber:member'
     summary: |-
-      对于集合中的每一项：指示样式是否包含 NumberFormat 属性。
+      对于集合中的每一项：指定样式是否包含 NumberFormat 属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeNumber
@@ -198,7 +198,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleCollectionLoadOptions#includePatterns:member'
     summary: |-
-      对于集合中的每一项：指示样式是否包含 Color、ColorIndex、InvertIfNegative、Pattern、PatternColor 和 PatternColorIndex 内部属性。
+      对于集合中的每一项：指定样式是否包含 Color、ColorIndex、InvertIfNegative、Pattern、PatternColor 和 PatternColorIndex 内部属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includePatterns
@@ -213,7 +213,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleCollectionLoadOptions#includeProtection:member'
     summary: |-
-      对于集合中的每一项：指示样式是否包括 FormulaHidden 和锁定保护属性。
+      对于集合中的每一项：指定样式是否包括 FormulaHidden 和锁定保护属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeProtection
@@ -243,7 +243,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleCollectionLoadOptions#locked:member'
     summary: |-
-      对于集合中的每一项：指示在工作表处于保护状态时是否锁定对象。
+      对于集合中的每一项：指定在工作表处于保护状态时是否锁定对象。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: locked
@@ -318,7 +318,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleCollectionLoadOptions#shrinkToFit:member'
     summary: |-
-      对于集合中的每一项：指示文本是否自动缩小以适合可用列宽。
+      对于集合中的每一项：指定文本是否自动缩小以适合可用列宽。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shrinkToFit
@@ -333,7 +333,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleCollectionLoadOptions#verticalAlignment:member'
     summary: |-
-      对于集合中的每一项：表示样式的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
+      对于集合中的每一项：指定样式的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
@@ -348,7 +348,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleCollectionLoadOptions#wrapText:member'
     summary: |-
-      对于集合中的每一项：指示 Microsoft Excel 是否对对象中的文本进行换行。
+      对于集合中的每一项：指定 Excel 是否对对象中的文本进行换行。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
