--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.workbookloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.workbookloadoptions.yml
@@ -63,7 +63,7 @@ items:
           - 'excel!Excel.Interfaces.BindingCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#name:member'
     summary: |-
-      获取工作簿名称。 只读。
+      获取工作簿名称。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -93,7 +93,7 @@ items:
           - 'excel!Excel.Interfaces.DocumentPropertiesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#protection:member'
     summary: |-
-      返回工作簿的工作簿保护对象。
+      返回工作簿的保护对象。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
