--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.worksheetdata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.worksheetdata.yml
@@ -23,7 +23,7 @@ items:
       - 'excel!Excel.Interfaces.WorksheetData#visibility:member'
   - uid: 'excel!Excel.Interfaces.WorksheetData#charts:member'
     summary: |-
-      返回作为工作表的一部分的图表的集合。 只读。
+      返回作为工作表的一部分的图表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: charts
@@ -38,7 +38,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetData#charts~0:complex'
   - uid: 'excel!Excel.Interfaces.WorksheetData#id:member'
     summary: |-
-      返回用于唯一标识指定工作簿中工作表的值。即使工作表被重命名或移动，标识符的值仍然相同。只读。
+      返回用于唯一标识指定工作簿中工作表的值。 即使工作表被重命名或移动，标识符的值仍然相同。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -68,7 +68,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.WorksheetData#names:member'
     summary: |-
-      一组范围限定到当前工作表的名称。 只读。
+      一组范围限定到当前工作表的名称。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: names
@@ -83,7 +83,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetData#names~0:complex'
   - uid: 'excel!Excel.Interfaces.WorksheetData#pivotTables:member'
     summary: |-
-      一组属于 worksheet 的 PivotTable 对象。 只读。
+      一组属于工作表的数据透视表对象。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTables
@@ -113,7 +113,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.WorksheetData#protection:member'
     summary: |-
-      返回表工作表的工作表保护对象。 只读。
+      返回表工作表的工作表保护对象。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
@@ -128,7 +128,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetProtectionData:interface'
   - uid: 'excel!Excel.Interfaces.WorksheetData#standardHeight:member'
     summary: |-
-      返回工作表中所有行的标准（默认）行高，以磅为单位。 只读。
+      返回工作表中所有行的标准（默认）行高，以磅为单位。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: standardHeight
@@ -143,7 +143,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.WorksheetData#standardWidth:member'
     summary: |-
-      返回或设置工作表中所有列的标准（默认）列宽。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
+      指定工作表中所有列的标准（默认）宽度。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: standardWidth
@@ -158,7 +158,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.WorksheetData#tabColor:member'
     summary: |-
-      获取或设置工作表标签颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
+      工作表的选项卡颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tabColor
@@ -173,7 +173,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.WorksheetData#tables:member'
     summary: |-
-      属于工作表的表的集合。 只读。
+      属于工作表的表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
