--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangeloadoptions.yml
@@ -60,7 +60,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#address:member'
     summary: |-
-      表示 A1 样式的区域引用。 Address 值将包含工作表引用（例如，"Sheet1！A1： B4 "）。 只读。
+      指定 A1 样式中的区域引用。 Address 值将包含工作表引用（例如，"Sheet1！A1： B4 "）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: address
@@ -75,7 +75,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#addressLocal:member'
     summary: |-
-      以用户语言表示对指定区域的区域引用。 只读。
+      以用户语言指定区域的区域引用。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addressLocal
@@ -90,7 +90,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#cellCount:member'
     summary: |-
-      范围中的单元格数。 如果单元格数超过 2^31-1 (2,147,483,647)，此 API 返回 -1。 只读。
+      指定区域中的单元格的数目。 如果单元格数超过 2^31-1 (2,147,483,647)，此 API 返回 -1。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: cellCount
@@ -105,7 +105,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#columnCount:member'
     summary: |-
-      表示区域中的列总数。 只读。
+      指定区域中的总列数。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnCount
@@ -135,7 +135,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#columnIndex:member'
     summary: |-
-      表示区域中第一个单元格的列编号。 从零开始编制索引。 只读。
+      指定区域中的第一个单元格的列号。 从零开始编制索引。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnIndex
@@ -241,7 +241,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#height:member'
     summary: |-
-      返回从区域的上边缘到区域的下边缘的 100％ 缩放的距离（以磅为单位）。 只读。
+      返回从区域的上边缘到区域的下边缘的 100％ 缩放的距离（以磅为单位）。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -256,7 +256,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#hidden:member'
     summary: |-
-      表示当前区域中的所有单元格是否隐藏。 只读。
+      表示当前区域中的所有单元格是否隐藏。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hidden
@@ -286,7 +286,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#isEntireColumn:member'
     summary: |-
-      表示当前区域是否为整列。 只读。
+      表示当前区域是否为整列。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEntireColumn
@@ -301,7 +301,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#isEntireRow:member'
     summary: |-
-      表示当前区域是否为整行。 只读。
+      表示当前区域是否为整行。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEntireRow
@@ -316,7 +316,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#left:member'
     summary: |-
-      返回从工作表的左边缘到区域的左边缘的 100％ 缩放的距离（以磅为单位）。 只读。
+      返回从工作表的左边缘到区域的左边缘的 100％ 缩放的距离（以磅为单位）。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -331,7 +331,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#linkedDataTypeState:member'
     summary: |-
-      表示每个单元格的数据类型状态。 只读。
+      表示每个单元格的数据类型状态。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: linkedDataTypeState
@@ -361,7 +361,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#numberFormatCategories:member'
     summary: |-
-      表示每个单元格的数字格式的类别。 只读。
+      表示每个单元格的数字格式的类别。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -392,7 +392,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#rowCount:member'
     summary: |-
-      返回区域中的总行数。 只读。
+      返回区域中的总行数。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowCount
@@ -422,7 +422,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#rowIndex:member'
     summary: |-
-      返回区域中第一个单元格的行编号。 从零开始编制索引。 只读。
+      返回区域中第一个单元格的行编号。 从零开始编制索引。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowIndex
@@ -468,7 +468,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#text:member'
     summary: |-
-      指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。 只读。
+      指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
@@ -483,7 +483,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#top:member'
     summary: |-
-      返回从工作表的上边缘到区域的上边缘的 100％ 缩放的距离（以磅为单位）。 只读。
+      返回从工作表的上边缘到区域的上边缘的 100％ 缩放的距离（以磅为单位）。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -513,7 +513,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#valueTypes:member'
     summary: |-
-      表示每个单元格的数据类型。 只读。
+      指定每个单元格中的数据类型。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueTypes
@@ -528,7 +528,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#width:member'
     summary: |-
-      返回从区域的左边缘到区域的右边缘的 100％ 缩放的距离（以磅为单位）。 只读。
+      返回从区域的左边缘到区域的右边缘的 100％ 缩放的距离（以磅为单位）。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
