--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.worksheetcustompropertycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.worksheetcustompropertycollectionloadoptions.yml
@@ -31,7 +31,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions#key:member'
     summary: |-
-      对于集合中的每一项：获取自定义属性的键。 只读。
+      对于集合中的每一项：获取自定义属性的键。 自定义属性键不区分大小写。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -47,7 +47,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions#value:member'
     summary: |-
-      对于集合中的每一项：获取自定义属性的值。 只读。
+      对于集合中的每一项：获取或设置自定义属性的值。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
