--- a/docs/docs-ref-autogen/excel/excel/excel.rangeareas.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.rangeareas.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RangeAreas#address:member'
@@ -57,7 +57,7 @@ items:
       - 'excel!Excel.RangeAreas#worksheet:member'
   - uid: 'excel!Excel.RangeAreas#address:member'
     summary: |-
-      返回 A1 样式中的 RageAreas 引用。 地址值将包含单元格的每个矩形块的工作表名称（例如“Sheet1!A1:B4, Sheet1!D1:D4”）。 只读。
+      返回 A1 样式中的 RangeAreas 引用。 Address 值将包含每个矩形单元格块的工作表名称（例如，"Sheet1！A1： B4、Sheet1！D1： D4 "）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: address
@@ -72,7 +72,7 @@ items:
           - string
   - uid: 'excel!Excel.RangeAreas#addressLocal:member'
     summary: |-
-      返回用户区域设置中的 RageAreas 引用。 只读。
+      返回用户区域设置中的 RangeAreas 引用。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addressLocal
@@ -133,7 +133,7 @@ items:
         description: ''
   - uid: 'excel!Excel.RangeAreas#cellCount:member'
     summary: |-
-      返回 RangeAreas 对象中的单元格数量，即总计各个矩形区域的单元格计数。 如果单元格计数超过 2^31-1 (2,147,483,647)，则返回 -1。 只读。
+      返回 RangeAreas 对象中的单元格数量，即总计各个矩形区域的单元格计数。 如果单元格计数超过 2^31-1 (2,147,483,647)，则返回 -1。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: cellCount
@@ -190,7 +190,7 @@ items:
             - '"All" | "Formats" | "Contents" | "Hyperlinks" | "RemoveHyperlinks"'
   - uid: 'excel!Excel.RangeAreas#conditionalFormats:member'
     summary: |-
-      返回与此 RangeAreas 对象中的任何单元格相交的 ConditionalFormats 集合。 只读。
+      返回与此 RangeAreas 对象中的任何单元格相交的 ConditionalFormats 集合。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: conditionalFormats
@@ -339,7 +339,7 @@ items:
           - 'excel!Excel.DataValidation:class'
   - uid: 'excel!Excel.RangeAreas#format:member'
     summary: |-
-      返回一个 rangeFormat 对象，其中封装了 RangeAreas 对象中的所有区域的字体、填充、边框、对齐方式和其他属性。 只读。
+      返回一个 RangeFormat 对象，封装 RangeAreas 对象中所有区域的字体、填充、边框、对齐方式和其他属性。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -635,7 +635,7 @@ items:
             - boolean
   - uid: 'excel!Excel.RangeAreas#isEntireColumn:member'
     summary: |-
-      指示此 RangeAreas 对象上的所有区域是否表示整列（例如“A:C, Q:Z”）。 只读。
+      指定此 RangeAreas 对象上的所有区域是否都代表整列（例如，"A:C，Q:Z"）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEntireColumn
@@ -650,7 +650,7 @@ items:
           - boolean
   - uid: 'excel!Excel.RangeAreas#isEntireRow:member'
     summary: |-
-      指示此 RangeAreas 对象上的所有区域是否表示整行（例如“1:3, 5:7”）。 只读。
+      指定此 RangeAreas 对象上的所有区域是否都代表整行（例如，"1:3，5:7"）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEntireRow
@@ -750,7 +750,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.RangeAreas#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -841,7 +841,7 @@ items:
         description: ''
   - uid: 'excel!Excel.RangeAreas#worksheet:member'
     summary: |-
-      返回当前 RangeAreas 的工作表。 只读。
+      返回当前 RangeAreas 的工作表。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
@@ -855,7 +855,7 @@ items:
         type:
           - 'excel!Excel.Worksheet:class'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RangeCollection:class'
     name: Excel.RangeCollection
@@ -939,7 +939,7 @@ references:
     name: Excel.Interfaces.RangeAreasLoadOptions
   - uid: 'excel!Excel.Interfaces.RangeAreasUpdateData:interface'
     name: Interfaces.RangeAreasUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.RangeAreasData:interface'
     name: Excel.Interfaces.RangeAreasData
