--- a/docs/docs-ref-autogen/excel/excel/excel.rowhiddenchangetype.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.rowhiddenchangetype.yml
@@ -1,8 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.RowHiddenChangeType:enum'
-    summary: '\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    isPreview: true
+    summary: '\[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.RowHiddenChangeType
     fullName: Excel.RowHiddenChangeType
     langs:
@@ -14,7 +13,6 @@ items:
       - 'excel!Excel.RowHiddenChangeType.unhidden:member'
   - uid: 'excel!Excel.RowHiddenChangeType.hidden:member'
     summary: '"隐藏" 指示隐藏行。'
-    isPreview: true
     name: hidden
     fullName: hidden
     langs:
@@ -23,7 +21,6 @@ items:
     numericValue: '"Hidden"'
   - uid: 'excel!Excel.RowHiddenChangeType.unhidden:member'
     summary: '"取消隐藏" 指示不隐藏行。'
-    isPreview: true
     name: unhidden
     fullName: unhidden
     langs:
